[package]
authors = ["Philipp Korber <p.korber@1aim.com>"]
categories = []
description = "This crate provides utilities to handle quoted strings (in Mail, Mime-Types, etc.)."
documentation = "https://docs.rs/quoted-string"
keywords = ["mail", "quoted", "mime", "string", "rfc5322"]
license = "MIT OR Apache-2.0"
name = "quoted-string"
readme = "./README.md"
repository = "https://github.com/1aim/quoted-string"
version = "0.1.0"

[dependencies]
quick-error = "1.2.1"
